Commit 12 - Fin du sprint et écheance 2

--- a/Code/public/css/style.css
+++ b/Code/public/css/style.css
@@ -24,3 +24,12 @@ tr:nth-child(1){
     font-size: 15px;
     font-weight: bold;
 }
+
+.HiddenDiv {
+    display: none;
+}
+
+
+.DivForShow:hover + .HiddenDiv{
+    display: block;
+}
